--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "13.3.1",
-    "@angular/cdk": "^13.3.1",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "^13.3.1",
     "@angular/compiler": "^13.3.1",
     "@angular/core": "^13.3.1",
     "@angular/elements": "^13.3.1",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "^13.3.1",
     "@angular/material": "13.3.1",
     "@angular/platform-browser": "^13.3.1",
@@ -72,7 +73,6 @@
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "sass": "1.32.13",
-    "protractor": "7.0.0",
     "ts-node": "~10.7.0",
     "tslint": "6.1.3",
     "typescript": "~4.4.2"
