--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CIPE",
+  "name": "material-dashboard-angular",
   "version": "2.7.0",
   "license": "MIT",
   "scripts": {
@@ -9,8 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && ng serve -o",
-    "prod": "ng build —-configuration production —-base-href=\"./\""
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && ng serve -o"
   },
   "engines": {
     "node": "6.11.1",
